# zhiku

./: .env.example  .gitignore  2026-03-20_知库_外部项目KnowNote分析.md  2026-03-20_知库_改进Agent交接_对照KnowNote.md  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml  package-lock.json  package.json  已知问题.md  知库_Agent交接文档_v1.0.md  知库_PRD_v1.0.docx  知库_交付版需求_v1.1.md  知库_技术实施与开发计划_v1.0.md
apps/desktop/: index.html  package.json  vite.config.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
docs/: bilibili_cookie_guide.md
docs/architecture/: README.md  desktop_runtime.md
services/api/: .env.example  Dockerfile  README.md  pyproject.toml
services/api/src/zhiku_api/: app_state.py  bootstrap.py  config.py  logging_setup.py  main.py  sidecar_main.py
services/api/src/zhiku_api/repositories/: library_repository.py
services/api/src/zhiku_api/routers/: __init__.py  backups.py  bilibili_bridge.py  chat.py  collections.py  contents.py  derive.py  diagnostics.py  health.py  imports.py  models.py  settings.py  system.py
services/api/src/zhiku_api/services/: __init__.py  asr_gateway.py  asr_runtime_service.py  backup_service.py  bilibili_client.py  bilibili_service.py  bilibili_session_broker.py  chat_service.py  content_link_service.py  content_term_service.py  content_upgrade_service.py  derive_service.py  diagnostics_service.py  export_service.py  file_parse_service.py  import_service.py  initial_material_service.py  llm_gateway.py  model_status_service.py  note_quality_service.py  online_search_service.py  query_builder.py  retrieval.py  webpage_service.py
(+68 files in other folders)
